service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: notes-app
  name: notes-app
spec:
  ports:
  - name: notes-app
    port: 80
    protocol: TCP
    targetPort: 3456
  selector:
    app: notes-app
  type: ClusterIP
status:
  loadBalancer: {}
